# solana-accountsdb-connector

./: Cargo.toml  Dockerfile  f
client/: Cargo.toml
client/src/: geyer_consumer.rs  grpc_plugin_source.rs  lib.rs  metrics.rs  types.rs
geyser-plugin-grpc/: Cargo.toml
geyser-plugin-grpc/src/: geyser_config.rs  geyser_plugin_grpc.rs  lib.rs
lib/: Cargo.toml
lib/src/: grpc_plugin_source.rs  lib.rs
proto/: geyser.proto
server/: Cargo.toml
server/src/: active_accounts.rs  geyser_plugin_grpc.rs  lib.rs  server.rs  test_server.rs
